fixed the issue of accessing the employees via DOM elements instead of using the employees object - also re-aligned the search and h1 elements in 1024 resolution so they float separated rather than stacked.

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ header{
 h1{
     text-transform: uppercase;
     text-align: left;
-    font-size: .5rem;
+    font-size: 1rem;
     padding: 1rem 1rem 1rem 0;
     margin: 0;
 }
@@ -134,12 +134,24 @@ h1{
     }
 
     header{
-       width: 50%;
+       margin: 2em 3em;
+    }
+
+    #search-employees{
+        align-self: flex-end;
+        height: 2em;
     }
 
     .heading-container{
-        align-self: flex-end;
+        display: flex;
+       flex-direction: row;
+       justify-content: space-between;
+       width: 90%;
     }
+
+    /* h1{
+        
+    } */
 
     h2{
         margin: 0;
